# video_ws

./: .gitignore  README.md  usage_guide.md
V1/: usage_guide.md
V1/src/hdmi_camera_driver/src/: camera_publisher_node.cpp
V1/src/image_roi_splitter/: CMakeLists.txt
V1/src/image_roi_splitter/include/image_roi_splitter/: roi_splitter_node.hpp
V1/src/image_roi_splitter/src/: roi_splitter_node.cpp
V2/: drone_vision_guide.md
V2/src/drone_vision/: CMakeLists.txt  package.xml
V2/src/drone_vision/include/drone_vision/: unified_vision_node.hpp
V2/src/drone_vision/src/: unified_vision_node.cpp
roi_calibration/: calibrate_rois.py  roi_calibration.txt
src/hdmi_camera_driver/: CMakeLists.txt  package.xml
src/hdmi_camera_driver/include/hdmi_camera_driver/: camera_publisher_node.hpp
src/hdmi_camera_driver/src/: camera_publisher_node.cpp
src/image_roi_splitter/: package.xml
src/image_roi_splitter/src/: roi_splitter_node.cpp
